k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abelup-frontend
  namespace: default
  labels:
    app: abelup-frontend
spec:
  selector:
    app: abelup-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
