k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abelup-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: abelup.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: abelup-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: abelup-frontend
            port:
              number: 80
